# tdlib-binary

./: .gitmodules  CMakePresets.json  README.md  pyproject.toml  setup.cfg  setup.py  vcpkg.json
.github/workflows/: cibw.yml
tdlib/: __init__.py
tests/: client_test.py
